[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/node/settlement/economy.gd" type="Script" id=1]
[ext_resource path="res://scenes/node/settlement/projects/infrastructure_project.gd" type="Script" id=2]
[ext_resource path="res://scenes/node/settlement/infrastructure.gd" type="Script" id=3]
[ext_resource path="res://scenes/node/settlement/settlement.gd" type="Script" id=4]
[ext_resource path="res://scenes/node/settlement/Population.cs" type="Script" id=5]

[node name="settlement" type="Node"]
script = ExtResource( 4 )

[node name="economy" type="Node" parent="."]
script = ExtResource( 1 )

[node name="projects" type="Node" parent="economy"]

[node name="available" type="Node" parent="economy/projects"]

[node name="infrastructure" type="Node" parent="economy/projects/available"]
script = ExtResource( 2 )
project_name = "Infrastructure"
cost = 500.0

[node name="in_progress" type="Node" parent="economy/projects"]

[node name="population" type="Node" parent="."]
script = ExtResource( 5 )

[node name="research" type="Node" parent="."]

[node name="infrastructure" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="project_is_finished" from="economy" to="." method="_on_economy_project_is_finished"]
[connection signal="projects_updated" from="economy" to="." method="_on_economy_projects_updated"]
